[package]
name = "bevy-bt-editor"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Behavior tree editor for BevyBT"
authors = ["kang-sw <ki6080@gmail.com>"]
default-run = "bevy-bt-editor"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
eframe = { version = "0.23.0", features = ["persistence"] }
egui = { version = "0.23.0", features = ["serde"] }
egui-modal = "0.2.5"
egui-notify = "0.10.0"
lazy_static = "1.4.0"
oneshot = "0.1.6"
parking_lot = "0.12.1"
rfd = "0.12.0"
rust-i18n = "2.2.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
strum = { version = "0.25.0", features = ["derive"] }
uuid = "1.4.1"
